--- a/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
@@ -28,31 +28,31 @@
             <br>
             <div class="row form-group">
                 @Html.LabelFor(model => model.nombre, new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
+                <div class="col-md-4">
                     @*@Html.EditorFor(model => model.nombre)*@
-                    @Html.TextBoxFor(model => model.nombre, new { @placeholder = @re.Nombre, @Value = @re.Nombre })
+                    @Html.TextBoxFor(model => model.nombre, new { @class = "form-control", @placeholder = @re.Nombre, @Value = @re.Nombre })
                     @Html.ValidationMessageFor(model => model.nombre)
                 </div>
             </div>
 
             <div class="row form-group">
                 @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.TextBoxFor(model => model.descripcion, new { @placeholder = @re.descripcion, @Value = @re.descripcion })
+                <div class="col-md-4">
+                    @Html.TextBoxFor(model => model.descripcion, new { @class = "form-control", @placeholder = @re.descripcion, @Value = @re.descripcion })
                     @Html.ValidationMessageFor(model => model.descripcion)
                 </div>
             </div>
             <br>
             <div class="row form-group">
                 @Html.LabelFor(model => model.puntos, new { @class = "control-label col-md-3" })
-                <div class="col-md-9">
-                    @Html.TextBoxFor(model => model.puntos, new { @placeholder = @re.puntos, @Value = @re.puntos })
+                <div class="col-md-4">
+                    @Html.TextBoxFor(model => model.puntos, new { @class = "form-control", @placeholder = @re.puntos, @Value = @re.puntos })
                     @Html.ValidationMessageFor(model => model.puntos)
                 </div>
             </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Aceptar" class="btn btn-default" />
+                    <input type="submit" value="Editar" class="btn  btn-primary" />
                 </div>
             </div>
         </div>
